# fastapi_weather_backend

./: .gitignore  pyproject.toml
src/fastapi_weather_backend/: main.py
src/fastapi_weather_backend/models/: sensor_data.py
src/fastapi_weather_backend/routes/: sensor.py  weather.py
src/fastapi_weather_backend/services/: firebase_config.py  weather_fetcher.py
